[tool.poetry]
name = "commonroad-all"
version = "0.1.0"
description = "Meta-Package for installing all CommonRoad Tools"
authors = ["Cyber-Physical Systems Group, Technical University of Munich <commonroad@lists.lrz.de>"]
license = "GPL-3.0-or-later"
readme = "README.md"
keywords= ["autonomous", "automated", "vehicles", "driving", "motion", "planning", "simulation", "map", "scenario"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
]
packages = [{include = "commonroad_all"}]

[tool.poetry.dependencies]
python = ">=3.10, <3.12"

[tool.poetry.group.pypi]
optional = true

[tool.poetry.group.pypi.dependencies]
commonroad-io = "^2024.3"
commonroad-vehicle-models = "^3.0.2"
commonroad-route-planner = "^2025.1.0"
commonroad-scenario-factory = "^2.0.0"
commonroad-ots = "^2025.1"
commonroad-sumo = "^2025.1"
commonroad-labeling = "^2025.1.1"
commonroad-crime = "^0.4.4"
commonroad-drivability-checker = "^2025.3.1"
commonroad-reach = "^2025.2.0"
commonroad-clcs = "^2025.2.0"
commonroad-global-planner = "^0.0.1"
commonroad-velocity-planner = "^1.0.0"
commonroad-reactive-planner = "^2025.1"
commonroad-raceline-planner = "^0.1.1"
commonroad-path-toolkit = "^0.0.1"
commonroad-prediction = "^0.1.1"
# commonroad-scenario-designer = "^0.8.4"  # TODO update commonroad-drivability-checker version
# commonroad-carla-interface = "^1.0.0"  # TODO python version must be updated
# commonroad-dataset-converter = "^2023.2"  # TODO python verion must be updated
# commonroad-openscenario-converter = "0.1.0"  # TODO commonroad-io version must be updated
# commonroad-rl = "2023.1.3"  # TODO commonroad-route-planner version must be updated
# commonroad-geometric = "0.1.2"  # TODO python version must be updated

#[tool.poetry.group.dev]
#optional = true
#
#[tool.poetry.group.dev.dependencies]
#commonroad-io = { git = "git@gitlab.lrz.de:cps/commonroad/commonroad-io.git", branch = "develop"}
## commonroad-vehicle-models = { git = "git@gitlab.lrz.de:cps/commonroad-vehicle-models.git", branch = "master"}  # TODO relax commonroad-crime
#commonroad-route-planner = { git = "git@gitlab.lrz.de:cps/commonroad-route-planner.git", branch = "develop" }
#commonroad-scenario-designer = { git = "git@gitlab.lrz.de:cps/commonroad/commonroad-scenario-designer.git", branch = "develop" }
#commonroad-scenario-factory = { git = "git@gitlab.lrz.de:cps/commonroad/scenario-factory.git", branch = "develop"}
#commonroad-ots = { git = "git@gitlab.lrz.de:cps/commonroad/cr-ots-interface.git", branch = "dev" }
#commonroad-sumo = { git = "git@gitlab.lrz.de:cps/sumo-interface.git", branch = "develop" }
#commonroad-labeling = { git = "git@gitlab.lrz.de:cps/commonroad/automatic-scenario-labeling.git", branch = "develop" }
#commonroad-crime = { git = "git@gitlab.lrz.de:cps/commonroad/commonroad-criticality-measures.git", branch = "develop" }
## commonroad-drivability-checker = { git = "git@gitlab.lrz.de:cps/commonroad-drivability-checker.git", branch = "development"}
## commonroad-reach = { git = "git@gitlab.lrz.de:cps/commonroad/commonroad-reachable-set.git", branch = "develop" }  # TODO fix build backend
#commonroad-clcs = { git = "git@gitlab.lrz.de:cps/commonroad/commonroad-clcs.git", branch = "main"}
#commonroad-global-planner = { git = "git@gitlab.lrz.de:cps/commonroad/commonroad-global-planner.git", branch = "develop" }
#commonroad-velocity-planner = { git = "git@gitlab.lrz.de:cps/commonroad/commonroad-velocity-planner.git", branch = "develop" }
#commonroad-reactive-planner = { git = "git@gitlab.lrz.de:cps/reactive-planner.git", branch = "development" }
## commonroad-carla-interface = { git = "git@gitlab.lrz.de:cps/commonroad/commonroad-carla-interface.git", branch = "develop" }  # TODO update python version
#commonroad-raceline-planner = { git = "git@gitlab.lrz.de:cps/commonroad/commonroad-raceline-planner.git", branch = "develop" }
#commonroad-path-toolkit = { git = "git@gitlab.lrz.de:cps/commonroad/commonroad-path-toolkit.git", branch = "development"}
#commonroad-prediction = { git = "git@gitlab.lrz.de:cps/commonroad/commonroad-prediction.git", branch = "develop" }
## commonroad-dataset-converter = { git = "git@gitlab.lrz.de:cps/commonroad/commonroad-dataset-converter.git", branch = "develop" }  # TODO commonroad-drivability-checker version must be updated


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
